--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -11,7 +11,7 @@
     </header>
     <main>
        <p>私は中学時代にサッカーを始めました。<br>現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
-       <img src="images\sample.jpg" alt="グランドに転がるサッカーボール">
+       <img src="/images/sample.jpg" alt="グランドに転がるサッカーボール">
        <a href="https://twitter.com/samuraijuku">私のプロフィール</a>
     </main>
   </body>
